website/src/App.css
/* Old body settings
body {
  position:relative;
  min-height: 100%;
  height: 100%;
}
*/

html {
  margin: 0;
  padding: 0;
  position: relative;
  min-height: 100%;
}

body {
  background-color: #faf9f8;
  margin-bottom: 220px; /* Default footer height */
}

#root {
  min-height: 100%;
  height:100%;
}

footer {
  padding-top:20px;
  padding-bottom:15px;
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color:#cccccc;
  color: #000;
}

main {
  position: relative;
  min-height: 100%;
}



/* Responsive footer */
@media only screen and (max-width: 992px) {
  body {
    margin-bottom: 300px;
  }
  footer .contacts {
    margin-top:20px;
  }
}

@media only screen and (max-width: 768px) {
  body {
    margin-bottom: 600px;
  }
  footer .row {
    text-align: center;
  }

  footer .contacts {
    margin-top:0px;
  }

  footer .contacts .text {
    margin-left:25%;
    margin-right: 25%;
  }
}

@media only screen and (max-width: 235px) {
  body {
    margin-bottom: 630px;
  }
}

@media only screen and (min-width: 769px) {
  footer .row {
    margin-left: 1%;
  }
}
/* End responsive footer */



/* Responsive menu and title */
@media only screen and (min-width: 661px) {
  .header-menu .pivot {
    display: block;
  }

  .header-menu .dropdown {
    display: none;
  }

  /* Header menu left margin on large displays */
  .header-menu .ms-FocusZone {
    margin-left: 10px;
  }
}
@media only screen and (max-width: 660px) {
  .header-menu .pivot {
    display: none;
  }

  .header-menu .dropdown {
    display: block;
  }
}


@media only screen and (min-width: 652px) {
  .header-title .large-display {
    display:block;
  }

  .header-title .small-display {
    display:none;
  }
}

@media only screen and (max-width: 651px) {
  .header-title .large-display {
    display:none;
  }

  .header-title .small-display {
    display:block;
  }

  .header-title .small-display .logo-text {
    margin-left:-5%;
  }
}
/* End responsive menu */


/* Dropdown style for header-menu */
.header-menu .ms-Dropdown-title { 
  border-style: none;
  background-color: #faf9f8;
  height: 44px;
  justify-content: center;
  text-align: center;
}

/* Grid system adjustments for filter container */
@media only screen and (max-width: 540px) {
  .courses-filter-options .col-xs-12 {
    max-width: 213px;
    text-align: center;
  }
  
  .courses-filter-options .row {
    margin-right:10%;
    margin-left:10%;
  }
}

@media only screen and (max-width: 370px) {
  .courses-filter-options .row {
    margin-right:0%;
    margin-left:0%;
  }
}

/* Faq_proposer form and other section adjustments */
@media only screen and (max-width: 575px) {
  .faq-proposer .col-xs-12 {
    max-width: 300px;
    text-align: center;
  }
  
  .courses-filter-options .row {
    margin-right:10%;
    margin-left:10%;
  }

  .administrators h6 {
    margin-right:15%;
    margin-left:15%;
  }

}
/* End Faq_proposer form and other section adjustments */

.materials .col-lg-3 {
  max-width:250px;
}

.header-menu .ms-Dropdown-title {
  line-height: 40px;
  padding:0;
}

.header-title .row {
  margin-right: 0px;
}

.ms-List {
  padding: 3px;
}

.ms-card {
  max-width: 600px;
}

.tutor {
  color:#d13438;
}

.tutor:hover {
  color: #e86e58;
}

.ms-ChoiceField-field {
  box-sizing: border-box;
}

.rules .card, .rules .card-body {
  background-color: #faf9f8;
}

/*------------
  Da sistemare
------------*/

.faq-proposer select {
  width: 100%;
  box-shadow: none;
  margin: 0px;
  padding: 0px 28px 0px 8px;
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  border-width: 1px;
  border-style: solid;
  border-color: rgb(96, 94, 92);
  border-radius: 2px;
  cursor: pointer;
  display: block;
  height: 32px;
  line-height: 30px;
  position: relative;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgb(96, 94, 92);
  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI",
    -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  font-weight: 400;
}

.faq-proposer option {
  box-shadow: none;
  margin: 0px;
  padding: 0px 28px 0px 8px;
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  border-width: 1px;
  border-style: solid;
  border-color: rgb(96, 94, 92);
  border-radius: 2px;
  cursor: pointer;
  display: block;
  height: 32px;
  line-height: 30px;
  position: relative;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI",
    -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  font-weight: 400;
}

.ms-ChoiceField-labelWrapper {
  overflow: visible;
}

.home .ms-Icon {
  font-size: 45px;
}

.ms-ChoiceFieldGroup-flexContainer {
  display: flex;
  justify-content: center;
}

.ms-ChoiceField {
  margin: 4px 4px 4px 4px;
}

.home .card {
  background-color: #faf9f8;
  border: none;
}

.home .ms-Button-flexContainer {
  margin-left: 5px;
}

a:active,
a:focus,
.home button:active,
.home button:focus {
  outline: 0;
  border: none;
  outline: none;
  box-shadow: none !important;
}

.faq-proposer button:focus,
.faq-proposer button:active {
  outline: none;
}

.rules button:focus,
.rules button:active {
  outline: none;
  border: none;
  outline: 0;
  box-shadow: none !important;
}

